# production-rag-system

./: .env.example  .gitignore  README.md  TECHNICAL_DOC.md  pyproject.toml  seed_qdrant.py
agents/: crag.py
app/: Dockerfile  config.py  main.py  models.py
data_pipeline/: chunker.py  extractor.py  fetcher.py  gst_sources.py  indexer.py  run_gst_pipeline.py
prompts/: grading.py  templates.py
retrieval/: filters.py  hybrid_retriever.py  reranker.py
routes/: health.py  query.py  search.py
security/: input_guard.py  output_guard.py
services/: conversation.py  document_grader.py  query_decomposer.py  query_router.py  rag_pipeline.py  semantic_cache.py
static/: index.html
tools/: web_search.py
