[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "production-rag-system"
version = "1.0.0"
description = "Production-grade RAG pipeline with hybrid retrieval, CRAG, semantic cache, and security layers"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=2.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",

    # LLM
    "anthropic>=0.28.0",

    # Vector Store
    "qdrant-client>=1.9.0",

    # Embeddings + Reranker
    "sentence-transformers>=3.0.0",
    "torch>=2.3.0",

    # Sparse retrieval (BM25)
    "rank-bm25>=0.2.2",
    "nltk>=3.8.1",

    # Redis
    "redis[hiredis]>=5.0.4",

    # Document extraction
    "pypdf2>=3.0.1",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.3.0",
    "camelot-py[cv]>=0.11.0",

    # Chunking
    "langchain-text-splitters>=0.2.0",
    "tiktoken>=0.7.0",

    # Observability
    "opik>=1.3.0",

    # Web search fallback (no API key required)
    "ddgs>=9.0.0",

    # Utilities
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "structlog>=24.2.0",
    "python-jose>=3.3.0",
    "cryptography>=42.0.0",
    "xxhash>=3.4.1",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
